--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-streamlit
-numpy
-pandas
-scikit-learn
-pickle
+numpy==1.21.6
+numpy==1.23.5
+pandas==1.3.5
+pandas==1.5.2
+scikit_learn==1.0.2
+scikit_learn==1.2.1
+streamlit==1.23.1
+streamlit==1.27.2
